<resources>
    <string name="app_name">Datey</string>
    <string name="fabDescription">Add</string>
    <string name="imgDescription">Add Contact Image</string>
    <string name="hint_name">Name</string>
    <string name="hint_date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>